fix: Improve header and banner visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1173,6 +1173,7 @@ select:focus {
   background-size: cover;
   background-position: center;
   position: relative;
+  z-index: 1;
 }
 
 .hero-area-inner::before {
@@ -1182,7 +1183,8 @@ select:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.6);
+  z-index: -1;
 }
 
 .hero-area-inner {
@@ -3714,19 +3716,9 @@ select:focus {
   margin-top: 10px;
 }
 .home9 .navigation {
+  background: #fff;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-.home9 .navigation.stiky-nav .navbar .navbar-brand img {
-  filter: unset;
-}
-.home9 .navigation.stiky-nav .navbar #mainmenu ul .nav-item .nav-link {
-  color: #242424;
-}
-.home9 .navigation.stiky-nav .navbar #mainmenu ul .nav-item .nav-link::before {
-  background-image: linear-gradient(55deg, #0250c5 0%, #166F41 100%);
-}
-.home9 .navigation.stiky-nav .navbar #mainmenu ul .nav-item .nav-link:hover::before, .home9 .navigation.stiky-nav .navbar #mainmenu ul .nav-item .nav-link.active::before {
-  background-image: linear-gradient(55deg, #0250c5 0%, #166F41 100%);
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
 }
 .home9 .navigation .navbar .navbar-brand img {
   filter: unset;
